--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main {
   border-right: 600px solid transparent;
   border-top: 300px solid #fe3334;
   border-bottom: 300px solid transparent;
-
+  z-index: -10;
   /*  */
   transition: transform 0.75s;
   transform-origin: top;
