--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ svg {
   size: 2rem;
 }
 
+.Mensajito {
+  display: flexbox;
+  text-align: start;
+  justify-content: center;
+}
+
 .paper {
   display: flex;
   flex-direction: column;
@@ -108,7 +114,7 @@ main {
   background: white;
   width: 1190px;
   height: 100%;
-  overflow-y: scroll;
+  overflow: scroll;
 
   transition: all 0.75s;
 }
