--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ main {
   background: white;
   width: 1190px;
   height: 100%;
-  overflow-y: scroll;
+  overflow: scroll;
 
   transition: all 0.75s;
 }
