--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ main {
   background: white;
   width: 1190px;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
 
   transition: all 0.75s;
 }
